solved the mystery of the invisible dome

--- a/App/src/globals.css
+++ b/App/src/globals.css
@@ -53,8 +53,8 @@
 		--muted: 214 57.6% 15.6%;
 		--muted-foreground: 215 20.2% 65.1%;
 
-		--accent: 214 57.6% 15.6%;
-		--accent-foreground: 215 20.2% 65.1%;
+		--accent: 196 91% 74%;
+		--accent-foreground: 216 100% 11%;
 
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 210 40% 98%;
